Add contextual logger to systems and components, remove NLog references

--- a/Demos/Glyph.Demos.DropAssets/Glyph.Demos.DropAssets.csproj
+++ b/Demos/Glyph.Demos.DropAssets/Glyph.Demos.DropAssets.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.7.1.189" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.7.0" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Windows.Forms" />
