Update to .NET 6 and MonoGame 3.8.1.303

--- a/Demos/Glyph.Demos.DropAssets/Glyph.Demos.DropAssets.csproj
+++ b/Demos/Glyph.Demos.DropAssets/Glyph.Demos.DropAssets.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>$(TargetFramework)</TargetFramework>
@@ -14,11 +14,8 @@
     <ProjectReference Include="..\..\Glyph.Pipeline\Glyph.Pipeline.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.7.1.189" />
+	  <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.1.303" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <None Update="NLog.config">
