--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -11,8 +11,9 @@
     <ProjectReference Include="..\External\Simulacra\Simulacra\Simulacra.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.Portable" Version="3.7.1.189" PrivateAssets="All" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" PrivateAssets="All" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.4.0" />
     <PackageReference Include="System.Reactive" Version="3.1.1" />
+    <PackageReference Include="System.Reflection.MetadataLoadContext" Version="6.0.0" />
   </ItemGroup>
 </Project>
