--- a/Tests/Glyph.Tests/Glyph.Tests.csproj
+++ b/Tests/Glyph.Tests/Glyph.Tests.csproj
@@ -6,7 +6,9 @@
     <ProjectReference Include="..\..\Glyph\Glyph.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.7.1.189" />
-    <PackageReference Include="NUnit" Version="3.9.0" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.2" />
+    <PackageReference Include="NUnit" Version="3.10.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
   </ItemGroup>
 </Project>
