Use default Effect pipeline by copying pipeline package content, use runtime identifier to use correct ffmpeg executables

--- a/Demos/Glyph.Demos.DropAssets/Glyph.Demos.DropAssets.csproj
+++ b/Demos/Glyph.Demos.DropAssets/Glyph.Demos.DropAssets.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>$(TargetFramework)</TargetFramework>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Glyph.Engine\Glyph.Engine.csproj" />
